# boxer-validator-nginx

./: .gitignore  Cargo.toml  README.md  justfile  settings.toml
.container/: Dockerfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: build-container-image.yaml  build.yaml  publish-ecr-public.yaml
.helm/: Chart.yaml  values.yaml
.helm/templates/: _helpers.tpl  deployment.yaml  disruption-budget.yaml  secrets.yaml  service.yaml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/boxer-validator-nginx-http/: Cargo.toml
crates/boxer-validator-nginx-http/src/: lib.rs
crates/boxer-validator-nginx-http/src/http/: conversions.rs  health.rs  mod.rs  openapi.rs
crates/boxer-validator-nginx-http/src/http/controllers/: v1.rs
crates/boxer-validator-nginx-http/src/http/controllers/v1/: action_set.rs  policy_set.rs  resource_set.rs  schema.rs  token_review.rs
crates/boxer-validator-nginx-http/src/http/controllers/v1/action_set/: models.rs
crates/boxer-validator-nginx-http/src/http/controllers/v1/policy_set/: models.rs
crates/boxer-validator-nginx-http/src/http/controllers/v1/resource_set/: models.rs
crates/boxer-validator-nginx-http/src/http/extractors/nginx/: request_context.rs
crates/boxer-validator-nginx-http/src/http/filters/: jwt_filter.rs  mod.rs
crates/boxer-validator-nginx-http/src/http/health/: tests.rs
crates/boxer-validator-nginx-http/src/models/: mod.rs  token.rs
crates/boxer-validator-nginx-http/src/services/: backends.rs  cedar_validation_service.rs  mod.rs  prefix_tree.rs  schema_provider.rs
crates/boxer-validator-nginx-http/src/services/backends/: kubernetes.rs
crates/boxer-validator-nginx-http/src/services/backends/kubernetes/: configuration.rs
crates/boxer-validator-nginx-http/src/services/base/: mod.rs  validation_service.rs
crates/boxer-validator-nginx-http/src/services/configuration/: app_settings.rs  mod.rs  models.rs
crates/boxer-validator-nginx-http/src/services/prefix_tree/: naive_tree.rs  parametrized_matcher.rs  tests.rs
crates/boxer-validator-nginx-http/src/services/prefix_tree/trie_bucket/: request_segment_bucket.rs
crates/boxer-validator-nginx-http/src/services/repositories/: action_repository.rs  lookup_trie.rs  mod.rs  models.rs  resource_repository.rs
crates/boxer-validator-nginx-http/src/services/repositories/action_repository/: action_discovery_document.rs  read_write.rs  tests.rs
crates/boxer-validator-nginx-http/src/services/repositories/lookup_trie/: backend.rs  schema_bound_trie_repository.rs
crates/boxer-validator-nginx-http/src/services/repositories/policy_repository/: policy_document.rs  read_only.rs  read_write.rs  tests.rs
crates/boxer-validator-nginx-http/src/services/repositories/resource_repository/: read_write.rs  resource_discovery_document.rs  tests.rs
crates/tests/: Cargo.toml
crates/tests/src/: fixtures.rs  lib.rs
integration-tests/: ingress.yaml
integration-tests/bootstrap/: bootstrap.yaml
integration-tests/helm/integration_tests/: Chart.yaml
integration-tests/helm/setup/: Chart.yaml
src/: main.rs
src/http/: conversions.rs  extractors.rs  mod.rs  openapi.rs  urls.rs
src/http/controllers/: action_set.rs  mod.rs  policy_set.rs  resource_set.rs  schema.rs  token_review.rs  v1.rs
src/http/controllers/action_set/: models.rs
src/http/controllers/policy_set/: models.rs
src/http/controllers/resource_set/: models.rs
src/http/controllers/v1/: policy_set.rs  resource_set.rs  token_review.rs
src/http/controllers/v1/action_set/: models.rs
src/http/controllers/v1/policy_set/: models.rs
src/http/conversions/: tests.rs
src/http/extractors/: mod.rs
src/http/extractors/nginx/: mod.rs  request_context.rs
src/http/extractors/v1/: boxer_claims.rs  mod.rs
src/http/filters/: jwt_filter.rs
src/models/: mod.rs  request_context.rs  token.rs  validation_settings.rs
src/models/boxer_claims/v1/: boxer_claims.rs  mod.rs
src/services/: action_repository.rs  audit.rs  authorizer.rs  backends.rs  cedar_validation_service.rs  mod.rs  prefix_tree.rs  schema_provider.rs  validation_service.rs
src/services/action_repository/: backend.rs  kubernetes_action_repository_backend.rs  models.rs  tests.rs
src/services/action_repository/backend/: tests.rs
src/services/action_repository/kubernetes_action_repository_backend/: tests.rs
src/services/audit/: audit_event.rs  log_audit_service.rs
src/services/backends/: kubernetes.rs
src/services/backends/kubernetes/: configuration.rs
src/services/base/: actions_repository_source.rs  mod.rs  policy_repository_source.rs  resource_repository_source.rs  schema_provider.rs  validation_service.rs
src/services/configuration/: mod.rs  models.rs  signature_settings.rs
src/services/prefix_tree/: bucket.rs  hash_tree.rs  mutable_trie_builder.rs  naive_tree.rs  tests.rs  trie_bucket.rs
src/services/prefix_tree/bucket/: hash_bucket.rs  path_segment_bucket.rs  request_segment_bucket.rs
src/services/prefix_tree/trie_bucket/: hash_bucket.rs  request_segment_bucket.rs
src/services/repositories/: action_repository.rs  backend.rs  common.rs  lookup_trie.rs  mod.rs  models.rs  policy_repository.rs  resource_repository.rs
src/services/repositories/action_repository/: action_discovery_document.rs  backend.rs  models.rs  read_only.rs  read_write.rs  tests.rs
src/services/repositories/action_repository/backend/: test_data.rs  tests.rs
src/services/repositories/action_repository/read_only/: tests.rs
src/services/repositories/backend/: tests.rs
src/services/repositories/lookup_trie/: backend.rs  schema_bound_trie_repository.rs
src/services/repositories/models/: http_method.rs  path_segment.rs  request_segment.rs  tests.rs
src/services/repositories/policy_repository/: models.rs  policy_document.rs  read_only.rs  read_write.rs  tests.rs
src/services/repositories/policy_repository/tests/: test_data.rs
src/services/repositories/resource_repository/: models.rs  read_only.rs  read_write.rs  resource_discovery_document.rs  tests.rs
