[package]
name = "boxer-validator-nginx"
version = "0.0.0"
edition = "2021"

[dependencies]
# Kubernetes dependencies
kube = { version = "0.99.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

futures-util = "0.3.8"
anyhow = "1.0.86"
josekit = "0.10.3"
log = { version = "0.4.22", features = ["kv", "kv_serde"] }
env_logger = "0.11.5"
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
actix-web = "4.11.0"
cedar-policy = "4.4.0"
config = "0.15.11"
serde = { version = "1.0.207", features = ["derive"] }
trie-rs = "0.4.2"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
async-trait = "0.1.88"
duration-string = { version = "0.5.2", features = ["serde"] }
strum = "0.27"
strum_macros = "0.27"
futures = "0.3.31"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
schemars = "0.8.6"
env_filter = "0.1.3"
md5 = "0.8.0"
collection_macros = "0.2.0"

#boxer_core = { path = "../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.13" }

# opentelemety
opentelemetry-instrumentation-actix-web = "0.22.0"
opentelemetry = "0.30.0"

[dev-dependencies]
rstest = "0.25.0"
test-context = "0.4.1"
# This line is for development, to be removed in the future,
#before moving to production
#boxer_core = { path = "../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.13" }
