[package]
name = "boxer-validator-nginx"
version = "0.1.0"
edition = "2024"

[dependencies]
boxer-validator-nginx-http = { path = "../boxer-validator-nginx-http" }
actix-web = "4.14.0"
log = "0.4.33"
anyhow = "1.0.103"
env_filter = "0.1.3"
env_logger = "0.11.5"

boxer_core = { path = "../../../boxer-core/" }
#boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.28" }


