[package]
name = "boxer-validator-nginx-http"
version = "0.1.0"
edition = "2024"

[dependencies]
# Kubernetes dependencies
kube = { version = "0.99.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }

futures-util = "0.3.8"
anyhow = "1.0.86"
log = { version = "0.4.22", features = ["kv", "kv_serde"] }
env_logger = "0.11.5"
serde_json = "1.0.140"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
actix-web = "4.11.0"
cedar-policy = "4.4.0"
config = "0.15.11"
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.88"
duration-string = { version = "0.5.2", features = ["serde"] }
futures = "0.3.31"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
schemars = "0.8.6"

#boxer_core = { path = "../../../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.30" }

# opentelemety
opentelemetry-instrumentation-actix-web = "0.22.0"
pretty_assertions = "1.4.1"

[dev-dependencies]
rstest = "0.25.0"
test-context = "0.4.1"
test-case = "3.3.1"
# This line is for development, to be removed in the future,
#before moving to production
#boxer_core = { path = "../../../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.30" }

