[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
boxer-validator-nginx-http = { path = "../boxer-validator-nginx-http" }
#boxer_core = { path = "../../../boxer-core/" }
boxer_core = { git = "https://github.com/SneaksAndData/boxer-core.git", tag = "v0.0.33" }
anyhow = "1.0.103"
mockall = "0.15.0"
reqwest = { version = "0.13.4", default-features = false, features = ["form", "rustls-no-provider"] }
rstest = "0.26.1"
actix-web = "4.14.0"
env_logger = "0.11.11"
log = "0.4.33"
serde_json = "1.0.150"
tokio = "1.52.3"
kube = { version = "0.99.0", features = ["config", "client", "runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
